# docs/swagger.json
@@ -86,11 +86,11 @@
         "rpc.RemoteStartTransactionReq": {
             "type": "object",
             "properties": {
-                "connector_id": {
+                "charge_point_id": {
                     "type": "integer"
                 },
-                "cp_id": {
-                    "type": "string"
+                "connector_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -105,8 +105,8 @@
         "rpc.RemoteStopTransactionReq": {
             "type": "object",
             "properties": {
-                "cp_id": {
-                    "type": "string"
+                "charge_point_id": {
+                    "type": "integer"
                 },
                 "transaction_id": {
                     "type": "integer"
